# ncbitaxonomy

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
data/: ncbi_taxonomy.sqlite  sample_refseq.fasta
migrations/2020-05-01-095116_create_taxonomy/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
