[package]
name = "ncbitaxonomy"
description = "Read NCBI Taxonomy Database from files and work with NCBI Taxonomy DB"
version = "0.3.0"
authors = ["Peter van Heusden <pvh@sanbi.ac.za>"]
license = "MIT"

[dependencies]
thiserror = "~1.0"
indextree = "~3"
bio = "~0.25"
clap = "~2.32"
seq_io = "~0.3"
flate2 = "~1"
